Fix examples css
iframe height was overflowing

--- a/examples/index.css
+++ b/examples/index.css
@@ -71,6 +71,7 @@ h1 {
 	display: flex;
 	flex: 1 1 auto;
 	flex-direction: row;
+	height: 100%;
 }
 
 .sidebar-wrapper {
